<resources>
    <string name="app_name">SmartDiary</string>
    <string name="my_balance_graph">My Balance Graph</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="welcome">Welcome..!</string>
    <string name="amount">0000</string>
    <string name="balance">Balance</string>

    <string name="home">home</string>
    <string name="incomeb">income</string>
    <string name="expences">expences</string>
    <string name="map">map</string>
    <string name="messages">messages</string>

    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_expences">Add Expences</string>
    <string name="note">Note</string>
    <string name="noteb">note</string>
    <string name="category">Category</string>
    <string name="categoryb">category</string>
    <string name="add_income">Add Income</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="dateb">date</string>
    <string name="amountn">Amount</string>
    <string name="lkr">LKR</string>
    <string name="let_s_explore_more">Explore More</string>
    <string name="title_activity_near_place_view">NearPlaceViewActivity</string>
</resources>