<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="10dp"
    android:layout_margin="5dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/inputfields">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="10dp">
            <TextView
                android:id="@+id/noteR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/catR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/dateR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:paddingEnd="10dp">
            <TextView
                android:id="@+id/amountR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lkr"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>